spring-boot-kafka-sample: add flink kafka example